Too small place for english label problem fixed

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -205,7 +205,7 @@ label{
 
 .infoLi .label{
     position: absolute;
-    max-width: 100px;
+    max-width: 125px;
     left: 0;
     top: 0;
 }
